容器技术/k8s/show/service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-show
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: show
