容器技术/k8s/show/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-show
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: show
