容器技术/k8s/show/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-show
spec:
  rules:
  - host: www.ingress.show.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-show
          servicePort: 80
